# Playground

./: README.txt
Python_2025-07-22/: main.py
Python_2025-07-22_2/: pyproject.toml
Python_2025-07-22_2/my-project/: README.md  pyproject.toml
packaging_tutorial/: pyproject.toml
packaging_tutorial/src/example_package_bryce-sanchez-alpha/: example.py
